# Ethernet_UDP_Indicator

./: CMakeLists.txt  main.cpp
immitator_app/: Basic_Types.h  CMakeLists.txt  main.cpp
immitator_app/indicator_subwidget/: indicator_subwidget.cpp  indicator_subwidget.h
immitator_app/indicators_data/: indicators_data.cpp  indicators_data.h
immitator_app/network_work/: network_work.cpp  network_work.h
immitator_app/resources/: app_classes.qmodel  imitator_app_model.qmodel  status_diagram.scxml
immitator_app/widget_manager/: widget_manager.cpp  widget_manager.h
immitator_app/workspace_menu/: workspace_menu.cpp  workspace_menu.h
indicators_status_app/: CMakeLists.txt
indicators_status_app/exchange_status_widget/: exchange_status_widget.cpp  exchange_status_widget.h
indicators_status_app/indicators_local_data/: indicators_local_data.cpp  indicators_local_data.h
indicators_status_app/network_data/: network_data.cpp  network_data.h
indicators_status_app/new_ip_menu/: new_ip_menu.cpp  new_ip_menu.h
indicators_status_app/resources/: Status_diagram.scxml  apps_interactions.qmodel  control_app.qmodel  imitator_app_model.qmodel  indicator_controll_app_model.qmodel  user_interactions_model.qmodel
indicators_status_app/start_menu/: start_menu.cpp  start_menu.h
indicators_status_app/subwidget_menu/: subwidget_menu.cpp  subwidget_menu.h
indicators_status_app/widget_manager/: widget_manager.cpp  widget_manager.h
indicators_status_app/workspace_menu/: workspace_menu.cpp  workspace_menu.h
